# dds-ports

./: .gitignore  Makefile  azure-pipelines.yml  pyproject.toml  toolchain.json5
.github/workflows/: build-publish-repo.yml
dds_ports/: auto.py  collect.py  crs.py  fs.py  git.py  github.py  legacy.py  main.py  port.py  repo.py  util.py
ports/: abseil_ports.py  asio_ports.py  catch2_ports.py  enet_ports.py  imgui_ports.py  libsodium_ports.py  neo_ports.py  simple_ports.py  sqlite3_ports.py  vob_ports.py  zlib_ports.py
