[tool.poetry]
name = "dds-ports"
version = "0.0.0"
description = "Scripts for create DDS repositories programmatically"
authors = ["vector-of-bool <vectorofbool@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.1.1"
semver = "^2.13.0"
json5 = "^0.9.5"
aiohttp = "^3.7.4"
dagon = "^0.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
mypy = "^0.931"
rope = "^0.18.0"
yapf = "^0.31.0"

[tool.poetry.scripts]
dds-ports-mkrepo = "dds_ports.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.pylint.MASTER]
jobs = 8
persistent = true
disable = [
    "C",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.pylint.REPORTS]
reports = false
score = true
output-format = "colorized"
disable = ["R", "I"]

[tool.mypy]
strict=true
ignore_missing_imports=true
incremental=true
sqlite_cache=true
mypy_path = "tools/"
